--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  status: MyString
+order_one:
+  status: "pending"
 
-two:
-  status: MyString
+order_two:
+  status: "complete"
