--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -15,3 +15,11 @@ two:
   photo_url: MyString
   stock: 1
   user_id: 1
+
+aurorahat:
+  name: "aurora's hat"
+  description: "Aurora's hat is a nice little hat"
+  price: 15.75
+  photo_url: "some url"
+  stock: 5
+  user_id: users(:aurora)
