--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  username: MyString
-  email: MyString
+aurora:
+  username: "auroralemieux"
+  email: "aurora@test.com"
 
-two:
-  username: MyString
-  email: MyString
+felix:
+  username: "felixbenjamin"
+  email: "felix@test.com"
