Added initial testing for .orders User Model method. Still WIP

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -5,3 +5,11 @@ order_one:
 
 order_two:
   status: "complete"
+
+aurora_order:
+  status: "complete"
+  email: "aurora@test.com"
+
+aurora_order_two:
+  status: "complete"
+  email: "aurora@test.com"
