--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -6,7 +6,7 @@ watch:
   price: 12.99
   photo_url: http://www.google.com
   stock: 1
-  user_id: 2
+  user: felix
 
 fancy_socks:
   name: "Expensive Socks"
@@ -14,7 +14,7 @@ fancy_socks:
   price: 100000.50
   photo_url:
   stock: 1
-  user_id: 2
+  user: aurora
 
 umbrella:
   name: Umbrella
@@ -22,7 +22,7 @@ umbrella:
   price: 14.99
   photo_url: http://www.google.com
   stock: 1
-  user_id: 3
+  user: aurora
 
 fancy_shirt:
   name: "Expensive Shirt"
@@ -30,7 +30,7 @@ fancy_shirt:
   price: 10000.50
   photo_url: MyString
   stock: 1
-  user_id: 3
+  user: felix
 
 aurorahat:
   name: "aurora's hat"
@@ -38,4 +38,4 @@ aurorahat:
   price: 15.75
   photo_url: "some url"
   stock: 5
-  user_id: users(:aurora)
+  user: aurora
