--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -23,3 +23,15 @@ user_orders_test_user_one:
   email: user_orders_test@one.com
   uid: "333455"
   provider: "github"
+
+jackie:
+  username: "jackiewatanabe"
+  email: "jackie@test.com"
+  uid: "174903"
+  provider: "github"
+
+# user_two_check_order_tests:
+#   username: "user_two_check_order_tests"
+#   email: "user_two@check_order_tests.com"
+#   uid: "378490"
+#   provider: "github"
