added more tests to user model and order_item model

--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -30,7 +30,7 @@ apple_check_status_order_one:
   product: apple
   order: check_status_order_one
   quantity: 2
-  ship_status: true
+  ship_status: false
 
 orange_check_status_order_one:
   product: orange
